<resources>

    <string name="app_name">FKIK</string>
    <string name="Tab1">Command</string>
    <string name="Tab2">Remote</string>
    <string name="Tab3">Joints</string>
    <string name="Tab4">Settings</string>
    <string name="StopDescription">비상 정지 버튼</string>
    <string name="space">" "</string>

    <string name="Command_CommandLine">CodeCommandLine</string>
    <string name="Command_Hint">move(0, 10, 10);</string>
    <string name="Command_save_and_load">save and load;</string>

    <string name="Remote_BT_Description">원격 조종 버튼</string>
    <string name="Remote_Pre">◀</string>
    <string name="Remote_Next">▶</string>
    <string name="Remote_J1">Joint1"    "</string>
    <string name="Remote_J2">Joint2"    "</string>
    <string name="Remote_J3">Joint3"    "</string>
    <string name="Remote_J4">Joint4"    "</string>
    <string name="Remote_J5">Joint5"    "</string>
    <string name="Remote_J6">Joint6"    "</string>
    <string name="Remote_Gripper">Gripper</string>
    <string name="Remote_Control">Remote Control Value Default msg</string>
    <string name="Remote_move_button">동작</string>
    <string name="Remote_x">X"             "</string>s
    <string name="Remote_Y">Y"             "</string>
    <string name="Remote_Z">Z"             "</string>
    <string name="Remote_Roll">Roll"       "</string>
    <string name="Remote_Pitch">Pitch"     "</string>
    <string name="Remote_Yaw">Yaw"         "</string>
    <string name="Remote_ToggleButton_Off">Joint</string>
    <string name="Remote_ToggleButton_On">Cartesian</string>

    <string name="Settings_BT_Description">블루투스 연결 버튼</string>
    <string name="Settings_Bluetooth_Connect">Connect Bluetooth          </string>
    <string name="Settings_Bluetooth_Connect_bt">연결</string>
    <string name="Settings_Bluetooth_Disconnect_bt">연결 끊기</string>
</resources>