<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="10"
    android:baselineAligned="false"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:orientation="vertical"
        android:background="@color/design_default_color_primary"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="65sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />
        <Button
            android:id="@+id/bt_tab1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Tab1"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:background="@color/design_default_color_primary"
            />

        <Button
            android:id="@+id/bt_tab2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Tab2"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:background="@color/design_default_color_primary"
            />

        <Button
            android:id="@+id/bt_tab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Tab4"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:background="@color/design_default_color_primary"
            />

        <ImageButton
            android:id="@+id/stop_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/baseline_cancel_24"
            android:background="@null"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/StopDescription"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8.7"
        android:orientation="vertical"
        android:background="@color/white"
        android:id="@+id/frame"
        >
    </FrameLayout>

</LinearLayout>